--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,16 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Sakai Web Application</display-name>
+	<display-name>Sakai Web Application</display-name>
+	<filter>
+		<filter-name>frontFilter</filter-name>
+		<filter-class>com.advancedprogramming.sakai.filter.FrontFiltery</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>frontFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
+
